--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -13,8 +13,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://laroyeh.github.io
-root: /StartHexo/
+url: https://laroyeh.github.io/StartHexo
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
