--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -82,3 +82,8 @@ deploy:
   repo: https://github.com/LaroYeh/StartHexo.git
   branch: master
   message: Build Hexo
+
+# Disqus
+enable: true
+disqus_shortname: laroyeh-github-io-starthexo
+count: true
